feat: Refactor crypto monitoring system with enhanced error handling and new features
- Removed obsolete checkpoint files from crypto_consumer and crypto_consumer_test.
- Updated metadata IDs for crypto consumers.
- Enhanced InfluxDB client configuration in crypto_consumer_spark.py for synchronous writes and improved error handling.
- Modified Kafka producer settings in crypto_producer.py for better reliability and performance.
- Added new Grafana dashboards and provisioning files for crypto price visualization.
- Introduced scripts for testing Kafka producer functionality with realistic data.
- Created a Streamlit app skeleton for future integration with InfluxDB and Kafka.
- Added requirements for Streamlit and related libraries.

--- a/crypto-monitoring/docker-compose.yml
+++ b/crypto-monitoring/docker-compose.yml
@@ -21,7 +21,10 @@ services:
     environment:
       KAFKA_BROKER_ID: 1
       KAFKA_ZOOKEEPER_CONNECT: zookeeper:2181
+      KAFKA_LISTENERS: PLAINTEXT://0.0.0.0:9092
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: PLAINTEXT:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
       KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: 1
       KAFKA_TRANSACTION_STATE_LOG_MIN_ISR: 1
       KAFKA_TRANSACTION_STATE_LOG_REPLICATION_FACTOR: 1
@@ -55,8 +58,14 @@ services:
     environment:
       GF_SECURITY_ADMIN_USER: admin
       GF_SECURITY_ADMIN_PASSWORD: admin
+      # Rendre l'URL/ORG/TOKEN Influx disponibles pour la provisioning Grafana
+      INFLUX_URL: http://influxdb:8086
+      INFLUX_ORG: crypto-org
+      INFLUX_TOKEN: jrM1t2xEEm5LDBfy27OXQoWVxau0mUZ_EpzBxiJNY2VJWVlg6NFLXkYqYHCD7Dqmlp9OA4Jv4LTluYCkphR_jA==
     volumes:
       - grafana-data:/var/lib/grafana
+      - ./grafana/provisioning:/etc/grafana/provisioning
+      - ./grafana/dashboards:/var/lib/grafana/dashboards
     depends_on:
       - influxdb
     networks:
