--- a/crypto-monitoring/docker-compose.yml
+++ b/crypto-monitoring/docker-compose.yml
@@ -58,7 +58,7 @@ services:
     environment:
       GF_SECURITY_ADMIN_USER: admin
       GF_SECURITY_ADMIN_PASSWORD: admin
-      # Rendre l'URL/ORG/TOKEN Influx disponibles pour la provisioning Grafana
+      # Variables pour la provisioning Influx (utilisées dans datasource.yml)
       INFLUX_URL: http://influxdb:8086
       INFLUX_ORG: crypto-org
       INFLUX_TOKEN: jrM1t2xEEm5LDBfy27OXQoWVxau0mUZ_EpzBxiJNY2VJWVlg6NFLXkYqYHCD7Dqmlp9OA4Jv4LTluYCkphR_jA==
