feat: initialize Crypto App with Next.js frontend and FastAPI backend
- Add README.md with setup instructions and API endpoints
- Create Dockerfile for FastAPI API service
- Implement configuration management using Pydantic
- Establish InfluxDB client connection for data retrieval
- Develop FastAPI endpoints for market cap and price overview
- Set up Docker Compose for orchestrating API and web services
- Create Dockerfile for Next.js web service
- Build dashboards for comparisons and core analytics using Grafana
- Implement global styles and layout for the web application
- Add price chart and market cap breakdown in the homepage
- Configure TypeScript and Tailwind CSS for the web application

--- a/crypto-monitoring/docker-compose.yml
+++ b/crypto-monitoring/docker-compose.yml
@@ -58,6 +58,9 @@ services:
     environment:
       GF_SECURITY_ADMIN_USER: admin
       GF_SECURITY_ADMIN_PASSWORD: admin
+      GF_SECURITY_ALLOW_EMBEDDING: "true"
+      GF_AUTH_ANONYMOUS_ENABLED: "true"
+      GF_AUTH_ANONYMOUS_ORG_ROLE: Viewer
       # Variables pour la provisioning Influx (utilisées dans datasource.yml)
       INFLUX_URL: http://influxdb:8086
       INFLUX_ORG: crypto-org
