feat: Add CoinMarketCap agent for cryptocurrency data collection and cross-validation
- Implemented CoinMarketCapAgent to fetch top 20 cryptocurrencies and validate prices against CoinGecko.
- Added anomaly detection for price variations exceeding 30%.
- Created cross-validation script to analyze price discrepancies between CoinGecko and CoinMarketCap.
- Developed Grafana dashboards for live monitoring of cryptocurrency prices and market data.
- Added run script for launching the CoinMarketCap agent with API key validation.

--- a/crypto-monitoring/.env.example
+++ b/crypto-monitoring/.env.example
@@ -16,6 +16,15 @@ INFLUX_BUCKET=crypto-data
 # InfluxDB Consumer Settings
 INFLUX_BATCH_SIZE=100
 
-# Agents Settings (en secondes)
+# Agents Settings (polling intervals en secondes)
 COINGECKO_POLL_INTERVAL=60
+COINMARKETCAP_POLL_INTERVAL=120
 FEAR_GREED_POLL_INTERVAL=300
+
+# API Keys
+# CoinMarketCap : Obtenez votre clé gratuite sur https://coinmarketcap.com/api/
+CMC_API_KEY=your_coinmarketcap_api_key_here
+
+# À venir : autres API keys
+# BINANCE_API_KEY=
+# BINANCE_API_SECRET=
