--- a/crypto-monitoring/requirements.txt
+++ b/crypto-monitoring/requirements.txt
@@ -8,3 +8,7 @@ requests==2.32.5
 urllib3==2.5.0
 influxdb-client==1.48.0
 python-dotenv==1.0.1
+tenacity==9.1.2
+pybreaker==1.4.1
+avro-python3==1.10.2
+websocket-client==1.9.0
