--- a/crypto-webapp/web/package.json
+++ b/crypto-webapp/web/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "recharts": "^3.4.1",
+    "swr": "^2.3.6",
     "tailwind-merge": "^2.2.0"
   },
   "devDependencies": {
